--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="projet.css" media="screen" />
-	<title>Projet</title>
+	<title>ProjetISN</title>
 </head>
 
 
