--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </ul>
 
 <div id="explication">
-	Ce site a pour but d'expliquer notre projet de ISN : sur l'annee (2015/2016) nous avons concu et construit un jeu. Ici nous pouvons voir les<a href= "/media/carla/TOSHIBA/ISN/JEU/regles.html"> regles</a> et fonctionnement du jeu ainsi que le carnet de bord explicant <a href= "/media/carla/TOSHIBA/ISN/JEU/evolution.html"> l'evolution</a> du projet et les difficultes et solutions trouves.
+	Ce site a pour but d'expliquer notre projet de ISN : sur l'annee (2015/2016) nous avons concu et construit un jeu. Ici nous pouvons voir les<a href= "/sitewebISN/regles.html"> regles</a> et fonctionnement du jeu ainsi que le carnet de bord explicant <a href= "/sitewebISN/evolution.html"> l'evolution</a> du projet et les difficultes et solutions trouves.
 
 </div>
 
