--- a/evolution.html
+++ b/evolution.html
@@ -10,9 +10,9 @@
 <h1 align="center">l'Evolution du projet</h1>
 
 <ul>
-<li><a href="/index.html"> <h2>Jeu</h2></a></li>
-<li><a href="/regles.html"> <h2>Regles</h2></a></li>
-<li><a href="/evolution.html"> <h2>Evolution</h2></a></li>
+<li><a href="/sitewebISN/index.html"> <h2>Jeu</h2></a></li>
+<li><a href="/sitewebISN/regles.html"> <h2>Regles</h2></a></li>
+<li><a href="/sitewebISN/evolution.html"> <h2>Evolution</h2></a></li>
 </ul>
 
 <div id="debut">
