--- a/evolution.html
+++ b/evolution.html
@@ -1,29 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-<link rel="stylesheet" type="text/css" href="projet.css" media="screen" />
-	<title>Evolution</title>
-</head>
-
-<body>
-
-<h1 align="center">l'Evolution du projet</h1>
-
-<ul>
-<li><a href="/sitewebISN/index.html"> <h2>Jeu</h2></a></li>
-<li><a href="/sitewebISN/regles.html"> <h2>Regles</h2></a></li>
-<li><a href="/sitewebISN/evolution.html"> <h2>Evolution</h2></a></li>
-</ul>
-
-<div id="debut">
-<h2>Conception du projet</h2>
-<p></p>
-</div>
-
-<div id="difficultes">
-<h2>Difficultes et solutions trouves (ou non)</h2>
-<p></p>
-</div>
-
-</body>
-</html>
+/media/carla/TOSHIBA/ISN/JEU/site web/evolution.html
