--- a/regles.html
+++ b/regles.html
@@ -1,1 +1,27 @@
-/media/carla/TOSHIBA/ISN/JEU/site web/regles.html
+<!DOCTYPE html>
+<html>
+<head>
+<link rel="stylesheet" type="text/css" href="projet.css" media="screen" />
+	<title>Regles</title>
+</head>
+<body>
+
+<h1 align="center">Regles du jeu</h1>
+
+
+<ul>
+<li><a href="/sitewebISN/index.html"> <h2>Jeu</h2></a></li>
+<li><a href="/sitewebISN/regles.html"> <h2>Regles</h2></a></li>
+<li><a href="/sitewebISN/evolution.html"> <h2>Evolution</h2></a></li>
+</ul>
+
+<div id="regles">
+	<h2>Presentation du jeu</h2>
+	<p>Quand le jeu se lance il y a une grille sur lequel on voit des obstacles, une icone immobile qu'il faudra recuperer et une 'porte' qui signifera la fin du niveau, anisi qu'une icone en haut a droite de la grille. Des boutons au bord permetteront de visiter cette page (pour lire les regles) ou bien la page d'acceuil de ce site. </p>
+	<h2>Mode de jeu</h2>
+	<p>Tapez une touche pour commencer. L'icone commencera a bouger dans une direction sur la grille sans s'arreter (pas en diagonale, que dans les directions orthonormes x et y); le joueur devra controler l'icone avec les fleches du clavier pour empecher qu'il heurte les obstacles. Le but de chaque niveau est de recuperer l'icone immobile et d'aller vers la porte pour passer au prochain niveau. Entre chaque niveau il y aura un temps d'attente, et a chaque niveau l'icone se deplace de plus en plus vite. Le but du jeu est de completer autant de niveaux que possible.</p>
+</div>
+
+
+</body>
+</html>
