--- a/evolution.html
+++ b/evolution.html
@@ -22,8 +22,8 @@
 
 <div id="difficultes">
 <h2>Difficultes et solutions trouves (ou non)</h2>
-<p> 1. Une des plus gros difficultes etait de faire fontionner keyListener. Au final on a du faire autrement, avec des boutons cliquables.
-2. Avec GridLayout on n'a pas pu mettre deux panneaux dans la meme fenetre, donc le menu et les boutons ont ete integres dans la premiere ligne du grid, et le plateau jouable est defini a partir de la deuxieme ligne·</p>
+<p> 1. Une des plus gros difficultes etait de faire fontionner keyListener. Au final on a du faire autrement, avec des boutons cliquables.</p>
+<p>2. Avec GridLayout on n'a pas pu mettre deux panneaux dans la meme fenetre, donc le menu et les boutons ont ete integres dans la premiere ligne du grid, et le plateau jouable est defini a partir de la deuxieme ligne·</p>
 </div>
 
 </body>
