--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
 
 <h1 align="center">Bienvenue!</h1>
 
-
-
 <ul>
 <li><a href="/sitewebISN/index.html"> <h2>Jeu</h2></a></li>
 <li><a href="/sitewebISN/regles.html"> <h2>Regles</h2></a></li>
@@ -26,7 +24,7 @@
 	<h2>Carla Shearer</h2>
 		<p>Avant de faire la spe ISN en terminale je faisais un peu de programmation en dehors du cadre scholaire avec un groupe (ce qui m'a permis de participer a un concours national), et aussi chez moi car mon pere travaille dans l'informatique et donc il pouvais m'aider avec des projets. J'ai un <a href= "https://github.com/Flinky"> compte Github</a> sur lequel j'ai depose des projets  mais vu que je ne travaillais l'informatique pas tres souvent j'avais comme but cette annee de pouvoir creer un projet et y tenir jusqu'au bout, et apprendre une autre langue aussi. Ce projet est la premiere fois que j'ecris en Java; sinon j'ecris principalement en C.</p>
 	<h2>Ibrahim Bennacer</h2>
-	<p>J'ai choisi la spe ISN car ça me  permet de preparer aux enseignements superieurs, grace a plusieurs competences a developper telles que, la maitrise les systemes numeriques et le travail sur  un projet et le traite en equipe et d'apprendre les bases de la programmation en informatique vu que l'annee prochaine je vais faire  IUT ou BTS d'informatique et de sciences et technologies de l'information ,durant l'annee on a appris beaucoup de choses notamment avec le logiciel java-scool qui permet de programme des minis logiciel et des jeux etc... ce logiciel et base sur le langage java donc il est compatible avec tous les systemes,puis on a appris a creer des page HTML avec bloc note en utilisant des fichier HTML et CSS.</p>
+	<p>J'ai choisi la spe ISN car ca me  permet de preparer aux enseignements superieurs, grace a plusieurs competences a developper telles que, la maitrise les systemes numeriques et le travail sur  un projet et le traite en equipe et d'apprendre les bases de la programmation en informatique vu que l'annee prochaine je vais faire  IUT ou BTS d'informatique et de sciences et technologies de l'information ,durant l'annee on a appris beaucoup de choses notamment avec le logiciel java-scool qui permet de programme des minis logiciel et des jeux etc... ce logiciel et base sur le langage java donc il est compatible avec tous les systemes,puis on a appris a creer des page HTML avec bloc note en utilisant des fichier HTML et CSS.</p>
 </div>
 
 </body>
