--- a/index.html
+++ b/index.html
@@ -27,5 +27,7 @@
 	<p>J'ai choisi la spe ISN car ca me  permet de preparer aux enseignements superieurs, grace a plusieurs competences a developper telles que, la maitrise les systemes numeriques et le travail sur  un projet et le traite en equipe et d'apprendre les bases de la programmation en informatique vu que l'annee prochaine je vais faire  IUT ou BTS d'informatique et de sciences et technologies de l'information ,durant l'annee on a appris beaucoup de choses notamment avec le logiciel java-scool qui permet de programme des minis logiciel et des jeux etc... ce logiciel et base sur le langage java donc il est compatible avec tous les systemes,puis on a appris a creer des page HTML avec bloc note en utilisant des fichier HTML et CSS.</p>
 </div>
 
+<div><a rel="license" href="http://creativecommons.org/licenses/by-nd/3.0/fr/"><img alt="Licence Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-nd/3.0/fr/88x31.png" /></a><br />Ce(tte) œuvre est mise à disposition selon les termes de la <a rel="license" href="http://creativecommons.org/licenses/by-nd/3.0/fr/">Licence Creative Commons Attribution - Pas de Modification 3.0 France</a>.</div>
+
 </body>
 </html>
